# corkel-wautil

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.sh  zigbuild.sh
crates/portal-corkel-alloc/src/: lib.rs
crates/portal-corkel-tool/src/: main.rs
dlmalloc/src/: dlmalloc.c
include/: alloc.h
include/sys/: mman.h  pagesize.h
lib/: mman.c
portal-corkel-alloc/: Cargo.toml
portal-corkel-alloc/src/: lib.rs
portal-corkel-tool/: Cargo.toml
portal-corkel-tool/src/: main.rs
source/dlmalloc/: build.sh
source/dlmalloc/src/: dlmalloc.c
source/include/: asyncify.h
source/include/sys/: pagesize.h
source/lib/: mman.c
src/: lib.rs
